<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:onClick="onClick">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/modeller"
			android:id="@+id/textView"
			android:layout_gravity="center_horizontal"
			android:gravity="center_vertical"
			android:height="40dip"
			android:textSize="@android:dimen/notification_large_icon_width"
			android:layout_weight="1"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/item_in"
			android:id="@+id/items_in_button"
			android:background="@drawable/rounded_button"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_weight="2"
			android:textSize="40sp"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/item_out"
			android:id="@+id/items_out_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="40sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/inventory_button"
			android:id="@+id/inventory_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="40sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/item_info"
			android:id="@+id/item_info_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="25sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/pick_button"
			android:id="@+id/pick_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="35sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="20dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings_button"
			android:id="@+id/settings_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="35sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/close_button"
			android:id="@+id/close_button"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textSize="35sp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:background="@drawable/rounded_button"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:onClick="onClick"/>

</LinearLayout>